--- a/Welcome_VIP_Dinner_Rajan_Bansal.html
+++ b/Welcome_VIP_Dinner_Rajan_Bansal.html
@@ -49,15 +49,15 @@ background: linear-gradient(90deg, rgba(19,35,107,1) 0%, rgba(161,209,178,1) 96%
 
 <img style="display: block; padding-top: 50px; margin-left: auto; margin-right: auto;" src="logo.png"/>
 
-<h1 class="whiteText">Welcomes you, Rajan Bansal to the VIP dinner</h1>
+<h1 class="whiteText">Welcome Rajan to the VIP Roundtable <br><br></h1>
 
 <p><img class=img style="display: block; margin-left: auto; margin-right: auto;" src="./rajan-bansal.jpeg" alt="Avatar" width="420" height="420" /></p>
 
 <p>
-	<h1 style="margin-left: 20; margin-right: 20" class="whiteText" >Rethinking Marketing Strategies with Branch QR codes.
+	<h1 style="margin-left: 20; margin-right: 20" class="whiteText" ><br> Rethinking Marketing Strategies with Branch QR codes.
 </h1>
 
-	<h2 style="margin-bottom: 20; margin-top: 50" class="whiteText" >Meet your peers from the Industry:</h2>
+	<h1 style="margin-bottom: 20; margin-top: 50" class="whiteText" >Meet fellow leaders from the industry:<br><br></h1>
 </p>
 
 <table style="margin-left: auto; margin-right: auto;">
