--- a/Welcome_VIP_Dinner_Rajan_Bansal.html
+++ b/Welcome_VIP_Dinner_Rajan_Bansal.html
@@ -69,7 +69,7 @@ background: linear-gradient(90deg, rgba(19,35,107,1) 0%, rgba(161,209,178,1) 96%
 		<a href="https://www.linkedin.com/in/varundas/">
 		<img class=tableImg style="display: block; margin-left: auto; margin-right: auto;" src="./Varun-Das.png" alt="Avatar" width="200" height="200" />
 		</a>
-		<h2 class="whiteText"><b> Varun Das </b> <br> SVP Product @ <br> Airtel</h2>
+		<h2 class="whiteText"><b> Varun Das </b> <br> SVP Product <br> Airtel</h2>
 	
 	</td>
 
