--- a/Welcome_VIP_Dinner_Yadush.html
+++ b/Welcome_VIP_Dinner_Yadush.html
@@ -233,7 +233,7 @@ background: linear-gradient(90deg, rgba(19,35,107,1) 0%, rgba(161,209,178,1) 96%
 
 
 	<td style="padding-left: 25;">
-		<a href="https://www.linkedin.com/in/adesara//">
+		<a href="https://www.linkedin.com/in/adesara/">
 		<img class=tableImg style="display: block; margin-left: auto; margin-right: auto;" src="./dolar_adesara.jpeg" alt="Avatar" width="200" height="200" />
 		</a>
 		<h2 class="whiteText"> Dolar Adesara <br> Head of Customer Success, India <br> Branch</h2>
