--- a/Welcome_VIP_Dinner_Manya_Kaushik.html
+++ b/Welcome_VIP_Dinner_Manya_Kaushik.html
@@ -212,6 +212,33 @@ background: linear-gradient(90deg, rgba(19,35,107,1) 0%, rgba(161,209,178,1) 96%
 	</td>
 
 </tr>
+	
+	<tr>
+
+	<td style="padding-left: 25;">
+		<a href="https://www.linkedin.com/in/vakul-agarwal/">
+		<img class=tableImg style="display: block; margin-left: auto; margin-right: auto;" src="./Vakul_Agarwal.jpeg" alt="Avatar" width="200" height="200" />
+		</a>
+		<h2 class="whiteText"> Vakul Agarwal <br> Vice President - Growth <br> Licious</h2>
+	</td>
+
+	<td style="padding-left: 25;">
+		<a href="https://www.linkedin.com/in/dhyani-doshi-61180062/">
+		<img class=tableImg style="display: block; margin-left: auto; margin-right: auto;" src="Dhyani_Doshi.jpeg" alt="Avatar" width="200" height="200" />
+		</a>
+		<h2 class="whiteText"> Dhyani Doshi <br> Customer Retention & Growth <br> Licious</h2>
+	
+	</td>
+
+	<td style="padding-left: 25;">
+		<a href="https://www.linkedin.com/in/mohd-swaleh/">
+		<img class=tableImg style="display: block; margin-left: auto; margin-right: auto;" src="./Swaleh_Shamim.jpeg" alt="Avatar" width="200" height="200" />
+		</a>
+		<h2 class="whiteText"> Swaleh Shamim <br> Brand & Growth <br> Baazi Games</h2>
+
+	</td>
+
+</tr>
 
 <tr>
 
